ALOT of improvements